# strata-db

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adr.md  bug.md  design-doc.md  feature.md  task.md
.github/workflows/: ci.yml
bins/strata-cli/: Cargo.toml
bins/strata-server/: Cargo.toml
bins/strata-server/src/: main.rs
crates/filesystem/: Cargo.toml  README.md
crates/filesystem/src/: codec.rs  error.rs  file.rs  journal.rs  lib.rs  loc.rs  memory.rs  workspace.rs
crates/filesystem/src/block/: direct.rs  disk.rs  file.rs  journal.rs  mem.rs  mod.rs
crates/filesystem/src/cache/: memo.rs  mod.rs  policies.rs
crates/filesystem/src/page/: header.rs  mod.rs  text.rs  tuple.rs  types.rs
crates/filesystem/src/tuple/: heap.rs  loc.rs  mod.rs  page.rs
crates/filesystem/src/vfs/: mod.rs
crates/filesystem/tests/: filesystem.rs
crates/journal/: Cargo.toml
crates/journal/src/: codec.rs  frame.rs
crates/journal/tests/: journal.rs
crates/lsm/: Cargo.toml
crates/lsm/src/: compaction.rs  config.rs  error.rs  key.rs  layout.rs  lib.rs  store.rs
crates/lsm/src/manifest/: manager.rs  mod.rs
crates/lsm/src/memstore/: btree.rs
crates/lsm/src/storage/: cache.rs  codec.rs  header.rs  page.rs  sstable.rs
crates/lsm/tests/: tree.rs
crates/pager/src/: codec.rs  error.rs  lib.rs
crates/pager/src/cache/: eviction.rs  eviction_policies.rs  memo.rs  mod.rs
crates/pager/src/page/: header.rs  text.rs
crates/pager/src/vfs/: codec.rs  mem.rs  mod.rs
crates/pager/tests/: pager.rs
crates/strata-db/: Cargo.toml
crates/strata-db/src/: lib.rs
crates/strata-db/src/catalog/: consts.rs  dataset.rs  db.rs  ids.rs  index.rs  mod.rs  schema.rs  system.rs  tables.rs
crates/strata-db/src/query/: config.rs  context.rs  executor.rs  expression.rs  logical_plan.rs  mod.rs  physical_plan.rs  stages.rs  volcano.rs
crates/strata-db/src/query/expression/: cast.rs  function.rs  mod.rs
crates/strata-db/src/query/planner/: binder.rs  lower.rs  rule.rs
crates/strata-db/src/query/planner/binder/: ddl.rs  dml.rs  expr.rs  mod.rs  query.rs  scope.rs
crates/strata-db/src/query/volcano/: join.rs  mod.rs  scalar.rs  sink.rs  sort.rs
crates/strata-db/src/query/volcano/join/: grace.rs  merge.rs  mod.rs  nested_loop.rs
crates/strata-db/src/sql/: mod.rs
crates/strata-db/src/storage/: codec.rs  mod.rs  row.rs  table_api.rs  temporal.rs  types.rs
crates/strata-db/src/storage/codec/: decimal.rs  interval.rs  mod.rs  scalar.rs  text.rs
crates/strata-db/tests/: ddl.rs  joins.rs  planner.rs  sort.rs  volcano.rs
crates/strata-db/tests/common/: mod.rs
crates/strata-store/: Cargo.toml
crates/strata-store/src/: engine.rs  iterator.rs  lib.rs
crates/strata-store/tests/: engine.rs
crucible/bench/: Cargo.toml
crucible/bench/benches/: db_workload.rs  direct_io.rs
crucible/spec-test/: Cargo.toml
crucible/spec-test/spec/: array.slt  cast.slt  catalog_data.slt  default.slt  functions.slt  insert.slt  joins.slt  key_ordering.slt  limit.slt  numeric.slt  order_by.slt  predicates.slt  queries.slt  smoke.slt  system_catalog.slt  types.slt
crucible/spec-test/spec/ddl/: create_replace.slt  schema.slt
journal/src/: error.rs  lib.rs
lsm/: Cargo.toml
lsm/src/: bloom.rs  error.rs  iterator.rs  lib.rs  manifest.rs  memtable_journal.rs  store.rs  wal.rs
lsm/src/level/: manifest.rs  mod.rs  writer.rs
lsm/src/manifest/: codec.rs  manager.rs  mod.rs
lsm/src/memstore/: btree.rs  journal.rs  mod.rs  wal.rs
lsm/src/storage/: cache.rs  data.rs  header.rs  mod.rs  page.rs  sstable.rs
lsm/tests/: tree.rs
pager/: Cargo.toml
pager/src/: error.rs  heap.rs  journal.rs  lib.rs
pager/src/cache/: eviction.rs
pager/src/page/: mod.rs  tuple.rs  types.rs
pager/src/vfs/: file.rs  mem.rs  mod.rs
spec-test/: Cargo.toml
spec-test/spec/: smoke.slt
spec-test/spec/ddl/: create_replace.slt
spec-test/src/: main.rs
strata/: Cargo.toml
strata-cli/: Cargo.toml
strata-cli/src/: main.rs
strata-db/: Cargo.toml
strata-db/src/: catalog.rs  codec.rs  consts.rs  dataset.rs  db.rs  lib.rs  project.rs  row.rs  schema.rs  tables.rs  types.rs
strata-db/src/catalog/: consts.rs  dataset.rs  db.rs  ids.rs  mod.rs  project.rs  tables.rs
strata-db/src/query/: context.rs  data.rs  executor.rs  expression.rs  logical_plan.rs  mod.rs  physical_plan.rs  planner.rs  volcano.rs
strata-db/src/query/planner/: binder.rs  builder.rs  lower.rs  pass.rs
strata-db/src/storage/: codec.rs  mod.rs  row.rs  table_api.rs  types.rs
strata-db/tests/: ddl.rs  planner.rs  smoke.rs  volcano.rs
strata-server/: Cargo.toml
strata-server/src/: main.rs
strata-spec-test/: Cargo.toml
strata-store/: Cargo.toml
strata-store/src/: engine.rs  iterator.rs  lib.rs
strata-store/src/level/: manifest.rs  mod.rs  writer.rs
strata-store/src/memstore/: wal.rs
strata-store/tests/: engine.rs
strata/src/: engine.rs  level.rs  lib.rs  memstore.rs
strata/src/level/: manifest.rs  mod.rs  sstable.rs  writer.rs
strata/src/memstore/: btree.rs  mod.rs  wal.rs
strata/tests/: engine.rs
