[package]
name = "strata-db"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-store = { path = "../strata-store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.62"
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
