[package]
name = "strata-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
pgwire = "0.40"
strata-db = { path = "../strata-db" }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
