[package]
name = "strata-db"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-store = { path = "../strata-store" }
# `NaiveDate` for calendar-date math; default features off to skip the
# OS-clock / timezone deps we don't need (Value::Date is just a day count).
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = { version = "0.62", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
