[package]
name = "bench"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "direct_io"
harness = false

[[bench]]
name = "db_workload"
harness = false

[dependencies]
filesystem = { path = "../../crates/filesystem" }
strata-store = { path = "../../crates/strata-store" }
tempfile = "3"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
